--- a/config.json
+++ b/config.json
@@ -1,33 +1,33 @@
 {
-    "ownerNumber": ["6282193115723@s.whatsapp.net","62887435047326@s.whatsapp.net"],
-    "ownerName": "ᴹᴿ᭄ ZeeoneOfcོ ×፝֟͜×",
-    "instagram" : "https://instagram.com/zeeoneofc",
-    "gcwa" : "https://instabio.cc/Alphabot",
-    "botName": "Haruka-Mdོ ",
-    "footer": "2023 © api.zeeoneofc.my.id",
+    "ownerNumber": ["6282172824438@s.whatsapp.net","62895600555028@s.whatsapp.net"],
+    "ownerName": "Riefzz",
+    "instagram" : "https://instagram.com/stvrxiety",
+    "gcwa" : "https://chat.whatsapp.com/E2xVtHtkPxn1xmye1RGtRl",
+    "botName": "Riefbotzz",
+    "footer": "2023 ©Riefzz",
     "sessionName": "session",
     "fotoDonasi": "./qris.jpg",
     "pathimg": "./Haruka.jpg",
     "BotKey": "your key",
-    "OpenAIKey": "your openai key",
+    "OpenAIKey": "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",
     "audio_di_bagian_menu": "./menu.mp3",
     "auto_ai_japri": false,
     "auto_ai_grup": false,
     "auto_welcomeMsg": true,
     "auto_leaveMsg": true, 
-    "antiViewOnce": true,
+    "antiViewOnce": false,
     "grupOnly": false,
     "japriOnly": false, 
     "antiDelete": false,
     "autobio": false,
-    "anticall": true,
+    "anticall": false,
     "autorespond": false,
     "autoblok212": true,
-    "autoread": true,
+    "autoread": false,
     "gamewaktu": 90,
-    "limitCount": 25,
+    "limitCount": 100,
     "gcount": {
-        "prem": 1000,
+        "prem": 10000,
         "user": 15
     }
 }
