--- a/config.json
+++ b/config.json
@@ -8,7 +8,7 @@
     "sessionName": "session",
     "fotoDonasi": "./qris.jpg",
     "pathimg": "./Haruka.jpg",
-    "BotKey": "your key",
+    "BotKey": "TDzqWbUKPiK7nZg",
     "OpenAIKey": "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",
     "audio_di_bagian_menu": "./menu.mp3",
     "auto_ai_japri": false,
